
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg2208">

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".AboutActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:id="@+id/linearLayout">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="155dp"
                android:layout_height="155dp"
                android:id="@+id/logo"
                android:layout_gravity="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/companyName"
                android:id="@+id/companyName"
                android:layout_gravity="center"
                android:textColor="#ffffffff"
                android:fontFamily="sans-serif-light"
                android:textStyle="bold"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/company_text"
                android:id="@+id/descriptionText"
                android:textColor="#ffffffff"
                android:textSize="14sp"
                android:layout_marginTop="15dp"
                android:fontFamily="sans-serif-light" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Время работы: 11-23"
                android:id="@+id/workTime"
                android:textColor="#ffffffff"
                android:textSize="14sp"
                android:layout_marginTop="15dp"
                android:fontFamily="sans-serif-light" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@color/accent">

                    <ImageView
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:id="@+id/imageView"
                        android:background="@drawable/phone"
                        android:baselineAlignBottom="false"
                        android:layout_margin="8dp" />
                </LinearLayout>

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/callButtonText"
                    android:id="@+id/callButton"
                    android:textColor="#ffffffff"
                    android:background="@drawable/buttonshape"
                    android:onClick="makeCall"
                    android:fontFamily="sans-serif-light"
                    android:textStyle="bold"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@color/accent" >

                    <ImageView
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:id="@+id/imageView2"
                        android:background="@drawable/email"
                        android:baselineAlignBottom="false"
                        android:layout_margin="8dp" />
                </LinearLayout>

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/emailButtonText"
                    android:id="@+id/emailButton"
                    android:textColor="#ffffffff"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/buttonshape"
                    android:onClick="sendEmail"
                    android:fontFamily="sans-serif-light"
                    android:textStyle="bold"
                    android:textSize="16sp" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"></LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/copyright"
        android:id="@+id/copyright"
        android:layout_gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textColor="#ffffffff"
        android:focusableInTouchMode="false"
        android:fontFamily="sans-serif-light" />

</RelativeLayout>
</ScrollView>

</LinearLayout>